force-app/main/default/objects/Part_Number__c/Part_Number__c.object-meta.xml
<CustomObject>
    <label>Part Number</label>
    <nameField>
        <label>Part Number Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>