force-app/main/default/objects/Part_Number__c/fields/Pre_Approved_SPA_Type__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approved_SPA_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pre Approved SPA Type</label>
    <referenceTo>Pre_Approved_SPA_Type__c</referenceTo>
    <relationshipLabel>Part Number</relationshipLabel>
    <relationshipName>Part_Number</relationshipName>
    <type>Lookup</type>
</CustomField>