force-app/main/default/objects/Part_Number__c/fields/Reserve_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Quantity__c</fullName>
    <label>Reserve Quantity</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>